--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# SwiftPM
+.swiftpm
+Package.resolved
